EVA-109 Fix: Se corrige la ortografia de la funcionalidad Categorías de movimientos.

--- a/Financiero/templates/Financiero/FlujoCaja/CategoriasMoviento/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/CategoriasMoviento/index.html
@@ -1,7 +1,7 @@
 {% extends 'Financiero/_common/base_financiero.html' %}
 {% load static %}
 {% load humanize %}
-<title>{% block titulo %}Categorias de Movimientos{% endblock %}</title>
+<title>{% block titulo %}Categorías de Movimientos{% endblock %}</title>
 {% block styles %}
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/datagrid/datatables/datatables.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
@@ -14,7 +14,7 @@
     <div class="panel-container show">
         <div class="header">
              <h1 class="header-title">
-                <i class='fal fa-window-restore'></i> Categorias de Movimientos <span class='fw-300'></span>
+                <i class='fal fa-window-restore'></i> Categorías de Movimientos <span class='fw-300'></span>
                  <br>
                  <br>
              </h1>
