--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -72,6 +72,10 @@ input[type=checkbox] ~ label:before {
     padding-right: 10px; !important;
 }
 
+.p-b-30{
+    padding-bottom: 30px; !important;
+}
+
 .campo_activo{
     background-color: rgba(233, 233, 233, 0.5); !important;
 }
