--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaContratos/detalle_flujo_caja_contratos.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaContratos/detalle_flujo_caja_contratos.html
@@ -47,7 +47,7 @@
                                                             <th>Estado</th>
                                                         {% endif %}
                                                         {% if perms.Financiero.change_flujocajadetalle or perms.Financiero.delete_flujocajadetalle %}
-                                                            {% if tipo == REAL and flujo_caja_enc.estado_id == EJECUCION or tipo == PROYECCION and flujo_caja_enc.estado_id == ALIMENTACION %}
+                                                            {% if tipo == REAL and flujo_caja_enc.estado_id == EJECUCION or tipo == PROYECCION and flujo_caja_enc.estado_id == ALIMENTACION or perms.TalentoHumano.can_access_usuarioespecial %}
                                                                 <th>Acción</th>
                                                             {% endif %}
                                                         {% endif %}
@@ -65,7 +65,7 @@
                                                                 <td><span class="badge {% if movimiento.estado_id == ELIMINADO %} badge-danger {% else %} badge-primary {% endif %} fw-300 ml-auto">{{ movimiento.estado }}</span></td>
                                                             {% endif %}
                                                             {% if perms.Financiero.change_flujocajadetalle or perms.Financiero.delete_flujocajadetalle %}
-                                                                {% if tipo == REAL and flujo_caja_enc.estado_id == EJECUCION or tipo == PROYECCION and flujo_caja_enc.estado_id == ALIMENTACION %}
+                                                                {% if tipo == REAL and flujo_caja_enc.estado_id == EJECUCION or tipo == PROYECCION and flujo_caja_enc.estado_id == ALIMENTACION  %}
                                                                 <td>
                                                                     {% if perms.Financiero.change_flujocajadetalle %}
                                                                     <a class="far fa-2x fa-edit" {% if fecha_minima_mes|date:"Y-m-d" <= movimiento.fecha_movimiento|date:"Y-m-d" and movimiento.estado_id == VIGENTE or movimiento.estado_id == EDITADO %} href="javascript:abrirModalCrearEditarFlujoDeCaja('{% url 'Financiero:flujo-caja-contratos-editar' movimiento.id %}', '{{ fecha_minima_mes|date:'Y-m-d' }}')" {% else %}style="color: grey" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
@@ -73,10 +73,16 @@
                                                                     {% if perms.Financiero.delete_flujocajadetalle %}
                                                                     <a class="far fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ movimiento.id }}"  {% if fecha_minima_mes|date:"Y-m-d" <= movimiento.fecha_movimiento|date:"Y-m-d" and movimiento.estado_id == VIGENTE or movimiento.estado_id == EDITADO %} href="javascript:void(0);"  onclick="fConfirmarEliminar({{ movimiento.id }})" {% else %}style="color: grey" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
                                                                     {% endif %}
-                                                                    {% if perms.TalentoHumano.can_access_usuarioespecial and movimiento.estado_id == EDITADO %}
-                                                                    <a class="far fa-2x fa-custom fa-list-alt color-danger-900" id="eliminar_{{ movimiento.id }}"  {% if fecha_minima_mes|date:"Y-m-d" <= movimiento.fecha_movimiento|date:"Y-m-d" %} href="javascript:void(0);"  onclick="abrirModalHistorial('{% url 'Financiero:flujo-caja-detalle-historial' movimiento.id %}')" {% else %}style="color: grey" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial"></a>
+                                                                    {% if perms.TalentoHumano.can_access_usuarioespecial and movimiento.estado_id == EDITADO or movimiento.estado_id == ELIMINADO %}
+                                                                    <a class="far fa-2x fa-custom fa-list-alt" id="eliminar_{{ movimiento.id }}"  {% if fecha_minima_mes|date:"Y-m-d" <= movimiento.fecha_movimiento|date:"Y-m-d" %} href="javascript:void(0);"  onclick="abrirModalHistorial('{% url 'Financiero:flujo-caja-detalle-historial' movimiento.id %}')" {% else %}style="color: grey" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial"></a>
                                                                     {% endif %}
                                                                 </td>
+                                                                {% elif perms.TalentoHumano.can_access_usuarioespecial %}
+                                                                    <td>
+                                                                    {% if perms.TalentoHumano.can_access_usuarioespecial and movimiento.estado_id == EDITADO or movimiento.estado_id == ELIMINADO %}
+                                                                    <a class="far fa-2x fa-custom fa-list-alt" id="eliminar_{{ movimiento.id }}"  {% if fecha_minima_mes|date:"Y-m-d" <= movimiento.fecha_movimiento|date:"Y-m-d" %} href="javascript:void(0);"  onclick="abrirModalHistorial('{% url 'Financiero:flujo-caja-detalle-historial' movimiento.id %}')" {% else %}style="color: grey" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial"></a>
+                                                                    {% endif %}
+                                                                    </td>
                                                                 {% endif %}
                                                             {% endif %}
                                                         </tr>
