--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaContratos/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaContratos/index.html
@@ -10,7 +10,7 @@
 {% endblock styles %}
 
 {% block main %}
-
+    {% with REAL=0 PROYECCION=1 %}
     <div class="panel-container show">
         <div class="header">
              <h1 class="header-title">
@@ -55,8 +55,8 @@
                                                             <td>{{ contrato.tipo_contrato }}</td>
                                                             <td><span class="badge badge-primary">{{ contrato.flujocajaencabezado_set.first.estado }}</span></td>
                                                             <td>
-                                                                <a href="{% url 'Financiero:flujo-caja-contratos-detalle' contrato.id 0 %}"><span class="badge badge-primary fw-300 ml-auto">Real</span><br></a>
-                                                                <a href="{% url 'Financiero:flujo-caja-contratos-detalle' contrato.id 1 %}"><span class="badge badge-primary fw-300 ml-auto">Proyección</span></a>
+                                                                <a href="{% url 'Financiero:flujo-caja-contratos-detalle' contrato.id REAL %}"><span class="badge badge-primary fw-300 ml-auto">Real</span><br></a>
+                                                                <a href="{% url 'Financiero:flujo-caja-contratos-detalle' contrato.id PROYECCION %}"><span class="badge badge-primary fw-300 ml-auto">Proyección</span></a>
                                                             </td>
                                                         </tr>
                                                     {% endfor %}
@@ -72,8 +72,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" tabindex="-1" id="crear_editar" role="dialog"></div>
-
+    {% endwith %}
 {% endblock %}
 {% block scripts %}
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
@@ -82,6 +81,5 @@
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.export.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/exportar_tabla.js' %}"></script>
-    <script src="{% static 'Financiero/js/FlujoCaja/crearEditarSubtipoMovimiento.js' %}"></script>
-    <script src="{% static 'Financiero/js/FlujoCaja/exportarTablasSubtiposMovimientos.js' %}"></script>
+    <script src="{% static 'Financiero/js/FlujoCaja/exportarTablas/exportarTablasSubtiposMovimientos.js' %}"></script>
 {% endblock %}
