--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
@@ -88,7 +88,7 @@
                                                                 {% elif perms.TalentoHumano.can_access_usuarioespecial or perms.TalentoHumano.view_historial_flujocajadetalle %}
                                                                     <td>
                                                                     {% if movimiento.estado_id == EDITADO or movimiento.estado_id == ELIMINADO %}
-                                                                    <a class="far fa-2x fa-custom fa-list-alt" id="eliminar_{{ movimiento.id }}"  {% if fecha_minima_mes|date:"Y-m-d" <= movimiento.fecha_movimiento|date:"Y-m-d" %} href="javascript:void(0);"  onclick="abrirModalHistorial('{% url 'Financiero:flujo-caja-movimiento-historial' movimiento.id %}')" {% else %}style="color: grey" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial"></a>
+                                                                    <a class="far fa-2x fa-custom fa-list-alt" id="eliminar_{{ movimiento.id }}"  href="javascript:void(0);"  onclick="abrirModalHistorial('{% url 'Financiero:flujo-caja-movimiento-historial' movimiento.id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial"></a>
                                                                     {% endif %}
                                                                     </td>
                                                                 {% endif %}
