--- a/Financiero/templates/Financiero/_common/menu_aplicacion.html
+++ b/Financiero/templates/Financiero/_common/menu_aplicacion.html
@@ -29,6 +29,14 @@
             </a>
         </li>
         {% endif %}
+        {%  if perms.TalentoHumano.view_flujos_de_caja %}
+        <li {% if menu_actual|last == 'flujos_de_caja' %} class="active" {% endif %}>
+            <a href="{% url 'Financiero:flujos-de-caja' 0 %}" title="Flujos de Caja" data-filter-tags="flujos caja">
+                <i class="fal fa-usd-square"></i>
+                <span class="nav-link-text" data-i18n="nav.Financiero_flujos_caja">Flujos de Caja</span>
+            </a>
+        </li>
+        {% endif %}
     </ul>
 </li>
 {% endif %}
