--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaContratos/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaContratos/index.html
@@ -1,4 +1,5 @@
-{% extends 'Proyectos/_common/base_proyectos.html' %}
+{% extends menu_extendido %}
+{% load eva_tags %}
 {% load static %}
 {% load humanize %}
 <title>{% block titulo %}Flujo de Caja por Contratos{% endblock %}</title>
@@ -22,6 +23,12 @@
         <div class="row">
             <div class="col-xl-12">
                 <div id="panel-1" class="panel">
+                    <div class="panel-hdr">
+                        <div class="col-md-10"></div>
+                        <div class="col-md-2" style="float: right">
+                            {% select_tag opciones 'opcion_id' '' value=opcion %}
+                        </div>
+                    </div>
                     <div class="panel-container show">
                         <div class="panel-content">
                                 <div class="panel-group">
@@ -82,4 +89,6 @@
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.export.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/exportar_tabla.js' %}"></script>
     <script src="{% static 'Financiero/js/FlujoCaja/exportarTablas/exportarTablasSubtiposMovimientos.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
+    <script src="{% static 'Financiero/js/FlujoCaja/filtroFlujoCajaFinanciero.js' %}"></script>
 {% endblock %}
