EVA-108 Feat: Se agrega el vinculo en el menu de financiero para ingresar al consolidado de flujo de caja.

--- a/Financiero/templates/Financiero/_common/menu_aplicacion.html
+++ b/Financiero/templates/Financiero/_common/menu_aplicacion.html
@@ -37,6 +37,14 @@
             </a>
         </li>
         {% endif %}
+        {% if perms.TalentoHumano.can_access_usuarioespecial %}
+        <li {% if menu_actual|last == 'consolidado' %} class="active" {% endif %}>
+            <a href="{% url 'Financiero:flujo-caja-consolidado' %}" title="Consolidado" data-filter-tags="consolidado">
+                <i class="fal fa-window-restore"></i>
+                <span class="nav-link-text" data-i18n="nav.Financiero_consolidado">Consolidado</span>
+            </a>
+        </li>
+        {% endif %}
     </ul>
 </li>
 {% endif %}
