EVA-111 Refactor: Se cambia la palabra Precio por Valor en los templates de flujo de caja.

--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaConsolidado/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaConsolidado/index.html
@@ -109,7 +109,7 @@
                                                 <tr>
                                                     <th>Fecha del Movimiento</th>
                                                     <th>Tipo de Movimiento</th>
-                                                    <th>Precio</th>
+                                                    <th>Valor</th>
                                                     <th>Proyectado/Real</th>
                                                     <th>Proceso/Contrato</th>
                                                     <th>Estado</th>
