--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
@@ -45,7 +45,7 @@
                                                     <tr>
                                                         <th>Fecha del Movimiento</th>
                                                         <th>Tipo de Movimiento</th>
-                                                        <th>Precio</th>
+                                                        <th>Valor</th>
                                                         <th>Fecha de Creación</th>
                                                         <th>Fecha de Modificación</th>
                                                         {% if perms.TalentoHumano.can_access_usuarioespecial or perms.TalentoHumano.view_flujos_de_caja %}
