--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-historial.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-historial.html
@@ -19,7 +19,7 @@
                             <th hidden>id</th>
                             <th>Fecha del Movimiento</th>
                             <th>Tipo de Movimiento</th>
-                            <th>Precio</th>
+                            <th><Valor></Valor></th>
                             <th>Usuario</th>
                             <th>Fecha de Creación</th>
                             <th>Fecha de Modificación</th>
